--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,21 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Cloudflare R2 Configuration (for Edge Functions)
+CLOUDFLARE_R2_ACCESS_KEY_ID=your_r2_access_key_id
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=your_r2_secret_access_key
+CLOUDFLARE_R2_BUCKET_NAME=your_r2_bucket_name
+CLOUDFLARE_R2_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+CLOUDFLARE_R2_PUBLIC_URL=https://your-custom-domain.com
 
 # Example:
 # NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+# CLOUDFLARE_R2_ACCESS_KEY_ID=your-access-key-id
+# CLOUDFLARE_R2_SECRET_ACCESS_KEY=your-secret-access-key
+# CLOUDFLARE_R2_BUCKET_NAME=fitness-tracker-photos
+# CLOUDFLARE_R2_ENDPOINT=https://abc123.r2.cloudflarestorage.com
+# CLOUDFLARE_R2_PUBLIC_URL=https://photos.yourapp.com
